AArch64: Fix MacroAssembler::get_thread convention

XMLWordPrintable

    • b10
    • aarch64
    • windows

        The AArch64 MacroAssembler::get_thread assumes an optimized JavaThread::aarch64_get_thread_helper with a specific calling convention. But the helper is such only on Linux, so the convention should be fixed at least for Windows/AArch64.

        * https://mail.openjdk.java.net/pipermail/aarch64-port-dev/2021-January/011218.html
        * https://github.com/openjdk/jdk/pull/2200#discussion_r563131940
        * https://github.com/openjdk/jdk/pull/2200#issuecomment-767409669

              Assignee:
              Anton Kozlov
              Reporter:
              Anton Kozlov
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

                Created:
                Updated:
                Resolved: