8261072: AArch64: Fix MacroAssembler::get_thread convention

Reviewed-by: burban, aph